--- a/frontend/src/components/page/home.css
+++ b/frontend/src/components/page/home.css
@@ -11,3 +11,19 @@
   overflow-y: auto;
   height: 100vh;
 }
+
+.CodeMirror {
+  text-align: start;
+  height: 30vh !important;
+}
+
+.markdown-body {
+  text-align: start;
+  max-width: 100%;
+  height: 70vh !important;
+  overflow: auto;
+}
+
+.markdown-body img {
+  max-width: 100%;
+}
