--- a/frontend/src/components/page/home.css
+++ b/frontend/src/components/page/home.css
@@ -3,7 +3,10 @@
 }
 
 .left {
+  height: 100vh;
   width: 30%;
+  overflow: auto;
+  border-right:1px solid #000000
 }
 
 .right {
@@ -12,18 +15,3 @@
   height: 100vh;
 }
 
-.CodeMirror {
-  text-align: start;
-  height: 30vh !important;
-}
-
-.markdown-body {
-  text-align: start;
-  max-width: 100%;
-  height: 70vh !important;
-  overflow: auto;
-}
-
-.markdown-body img {
-  max-width: 100%;
-}
