--- a/frontend/src/components/page/home.css
+++ b/frontend/src/components/page/home.css
@@ -6,7 +6,8 @@
   height: 100vh;
   width: 30%;
   overflow: auto;
-  border-right:1px solid #000000
+  border-right:1px solid #000000;
+  /*text-align: start;*/
 }
 
 .right {
