--- a/frontend/src/components/page/home.css
+++ b/frontend/src/components/page/home.css
@@ -1,18 +1,16 @@
 .container {
-    display: flex;
-}
+  display: flex; }
 
 .left {
   height: 100vh;
   width: 30%;
   overflow: auto;
-  border-right:1px solid #000000;
-  /*text-align: start;*/
-}
+  border-right: 1px solid #000000;
+  /*text-align: start;*/ }
 
 .right {
   width: 70%;
   overflow-y: auto;
-  height: 100vh;
-}
+  height: 100vh; }
 
+/*# sourceMappingURL=home.css.map */
